[workspace]
members = [
  "cmd-proc",
  "git-proc",
  "greenhell",
  "manager",
  "mhttp",
  "mlambda",
  "mmigration",
  "ociman",
  "pg-client",
  "pg-ephemeral",
  "stack-deploy",
  "stratosphere",
  "stratosphere-core",
  "stratosphere-generator",
  "wtt",
]

resolver = "3"

[workspace.package]
authors = ["Markus Schirp <mbj@schirp-dso.com>"]
edition = "2024"
rust-version = "1.93"

[workspace.dependencies]
async-stream = "0.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
cmd-proc = { version = "0.1.0", path = "cmd-proc" }
dirs = "6"
env_logger = "0.11"
fluent-uri = { version = "0.4", features = ["net"] }
git-proc = { version = "0.0.1", path = "git-proc" }
hex = "0.4.3"
http = "1.3"
indoc = "2"
itertools = "0.14"
log = "0.4"
mhttp = { path = "mhttp" }
mmigration = { path = "mmigration" }
nom = "8"
nom-language = "0.1"
ociman = { version = "0.0.1", path = "ociman" }
pg-client = { version = "0.0.2", path = "pg-client", features = ["sqlx"] }
pg-ephemeral = { version = "0.0.1-pre2", path = "pg-ephemeral" }
pretty_assertions = "1.4"
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"
rand = "0.9"
regex-lite = "0.1.6"
reqwest = { version = "0.13", features = ["json", "query", "rustls"], default-features = false }
semver = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision", "indexmap"] }
serde_path_to_error = "0.1"
sha2 = "0.10"
sqlx = { version = "0.9.0-alpha.1", git = "https://github.com/mbj/sqlx", rev = "f795fe994a6973ebe872c8c619706a4244c65d54", features = ["postgres", "runtime-tokio", "tls-rustls"] }
stratosphere = { version = "0.0.4", path = "./stratosphere" }
stratosphere-core = { version = "0.0.4", path = "./stratosphere-core" }
stratosphere-generator = { version = "0.0.4", path = "./stratosphere-generator" }
strum = { version = "0.27", features = ["derive"] }
syn = { version = "2", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["io-std", "macros", "rt"] }
toml = "0.9"
toml_edit = "0.22"
tower = { version = "0.5", features = ["limit"], default-features = false }
tower-service = "0.3"
futures-util = { version = "0.3", default-features = false }
url = { version = "2.5", features = ["serde"] }
wtt = { version = "0.0.2", path = "wtt" }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
multiple_crate_versions = "deny"
must_use_candidate = "deny"
uninlined_format_args = "deny"

[profile.release]
# Panic on integer overflow instead of wrapping
overflow-checks = true
# Optimize for size rather than speed
opt-level = "z"
# Enable Link Time Optimization for better optimization across crates
lto = true
# Reduce number of codegen units to improve optimization (at cost of compile time)
codegen-units = 1
# Minimal debug info for file paths and line numbers in backtraces
debug = "line-tables-only"
# Pack debug info into .dSYM on macOS (required for backtraces with line numbers)
split-debuginfo = "packed"
