[package]
name = "cloud-sql-connector"
version = "0.7.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Cloud SQL Auth Proxy connector for Rust"
license = "MIT"
repository = "https://github.com/mbj/mrs/tree/main/cloud-sql-connector"
readme = "README.md"
keywords = ["gcp", "cloud-sql", "postgres", "mysql", "connector"]
categories = ["database"]

[lints]
workspace = true

[dependencies]
google-cloud-auth.workspace = true
google-cloud-gax.workspace = true
google-cloud-sql-v1.workspace = true
ipnet.workspace = true
log.workspace = true
nom.workspace = true
rsa.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "sync"] }
tokio-rustls.workspace = true
x509-parser = "0.18"

[dev-dependencies]
rcgen = { version = "0.14", default-features = false, features = ["pem", "aws_lc_rs"] }
time = "0.3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
