[package]
name = "cmd-proc"
version = "0.3.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Process command builder with capture support"
license = "MIT"
repository = "https://github.com/mbj/mrs/tree/main/cmd-proc"
readme = "README.md"
keywords = ["command", "process", "shell", "exec", "async"]
categories = ["development-tools", "asynchronous"]

[features]
test-utils = []

[lints]
workspace = true

[dependencies]
log.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process", "io-util"] }
