[package]
name = "greenhell"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "GitHub status check aggregator - ensures all commits in a PR pass CI"
license = "MIT"
repository = "https://github.com/mbj/mrs/tree/main/greenhell"
readme = "README.md"
keywords = ["github", "ci", "status-check", "pull-request"]
categories = ["development-tools"]

[lints]
workspace = true

[dependencies]
async-stream.workspace = true
aws-config.workspace = true
base64.workspace = true
aws-sdk-cloudformation.workspace = true
aws-sdk-s3.workspace = true
aws-sdk-secretsmanager.workspace = true
chrono.workspace = true
clap.workspace = true
env_logger.workspace = true
futures-util.workspace = true
hex.workspace = true
hmac.workspace = true
http.workspace = true
itertools.workspace = true
log.workspace = true
mhttp.workspace = true
mlambda.workspace = true
nom.workspace = true
nom-language.workspace = true
rcgen.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
stack-deploy.workspace = true
stratosphere.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-service.workspace = true
url.workspace = true

[dev-dependencies]
mhttp = { workspace = true, features = ["test-utils"] }
