[package]
name = "manager"
version = "0.0.1"
edition.workspace = true

[lints]
workspace = true

[dependencies]
clap.workspace = true
env_logger.workspace = true
flate2 = "1.0"
indoc.workspace = true
log.workspace = true
ociman.workspace = true
pg-ephemeral = { path = "../pg-ephemeral" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar = "0.4"
url.workspace = true
