[package]
name = "manager"
version = "0.0.1"
edition.workspace = true

[lints]
workspace = true

[dependencies]
clap.workspace = true
cmd-proc.workspace = true
env_logger.workspace = true
flate2 = "1.0"
git-proc.workspace = true
indoc.workspace = true
log.workspace = true
ociman.workspace = true
pg-ephemeral = { path = "../pg-ephemeral" }
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
rayon = "1"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
similar = "2"
stratosphere-core.workspace = true
syn.workspace = true
tar = "0.4"
toml.workspace = true
toml_edit.workspace = true
url.workspace = true
