[package]
name = "manager"
version = "0.0.1"
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
clap.workspace = true
cmd-proc.workspace = true
tokio.workspace = true
env_logger.workspace = true
flate2 = "1.1"
git-proc.workspace = true
hex.workspace = true
indoc.workspace = true
log.workspace = true
ociman.workspace = true
pg-ephemeral = { path = "../pg-ephemeral" }
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
rayon = "1"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
similar = "3"
stratosphere-core.workspace = true
syn.workspace = true
tar = "0.4"
thiserror.workspace = true
toml.workspace = true
toml_edit.workspace = true
url.workspace = true
walkdir.workspace = true
