[package]
edition.workspace = true
rust-version.workspace = true
name = "mhttp"
version = "0.0.1"
description = "Minimal HTTP client abstraction with typed requests and response decoders"
license = "MIT"
repository = "https://github.com/mbj/mrs/tree/main/mhttp"
homepage = "https://github.com/mbj/mrs/tree/main/mhttp"
keywords = ["http", "client", "api"]
categories = ["web-programming::http-client"]

[features]
test-utils = []

[lints]
workspace = true

[dependencies]
futures-util.workspace = true
http.workspace = true
log.workspace = true
nom.workspace = true
nom-language.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tower-service.workspace = true
url.workspace = true

[dev-dependencies]
mhttp = { path = ".", features = ["test-utils"] }
tokio.workspace = true
