[package]
edition.workspace = true
name = "mlambda"
version = "0.0.1"

[dependencies]
http = "1.3.1"
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_path_to_error = "0.1.17"
