[package]
name = "mmigration"
version = "0.1.0"
edition.workspace = true

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
file-buf = { version = "0.0.1", path = "../file-buf" }
log = "0.4.27"
pg-client = { version = "0.0.1", path = "../pg-client" }
regex-lite = "0.1.6"
sha2 = "0.10.9"
sqlx = { workspace = true }
