[package]
name = "mmigration"
version = "0.0.1"
edition.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]
clap.workspace = true
log.workspace = true
nom.workspace = true
nom-language.workspace = true
pg-client.workspace = true
sha2.workspace = true
sqlx.workspace = true

[dev-dependencies]
indoc.workspace = true
