[package]
name = "mreaper"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Parent-death-triggered cleanup of OCI containers via label sweep"
license = "MIT"
repository = "https://github.com/mbj/mrs/tree/main/mreaper"

[lints]
workspace = true

[dependencies]
cmd-proc.workspace = true
semver.workspace = true
log.workspace = true
ociman.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process", "io-util"] }
