[package]
name = "ociman"
version = "0.3.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Unified API for OCI container runtimes (Docker, Podman)"
license = "MIT"
repository = "https://github.com/mbj/mrs/tree/main/ociman"
readme = "README.md"
keywords = ["docker", "podman", "container", "oci"]
categories = ["development-tools"]

[features]
test-utils = ["dep:env_logger"]

[lints]
workspace = true

[dependencies]
clap.workspace = true
cmd-proc.workspace = true
tokio.workspace = true
log.workspace = true
nom.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
walkdir = "2.5"
env_logger = { workspace = true, optional = true }

[dev-dependencies]
indoc.workspace = true
