[package]
name = "pg-client"
version = "0.0.1-pre1"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "PostgreSQL client configuration and connection management"
license = "MIT"
repository = "https://github.com/mbj/mrs/tree/main/pg-client"
readme = "README.md"
keywords = ["postgres", "postgresql", "database", "client"]
categories = ["database"]

[lints]
workspace = true

[dependencies]
hostname-validator = "1.1.1"
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
url = "2.5.7"

[dev-dependencies]
ociman.workspace = true
pg-ephemeral.workspace = true
serde_json.workspace = true
pretty_assertions.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
