[package]
name = "pg-client"
version = "0.0.1-pre1"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "PostgreSQL client configuration and connection management"
license = "MIT"
repository = "https://github.com/mbj/mrs/tree/main/pg-client"
readme = "README.md"
keywords = ["postgres", "postgresql", "database", "client"]
categories = ["database"]

[lints]
workspace = true

[features]
default = []
sqlx = ["dep:sqlx"]

[dependencies]
hostname-validator = "1.1.1"
percent-encoding = "2.3"
serde.workspace = true
sqlx = { workspace = true, optional = true }
strum.workspace = true
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
env_logger.workspace = true
ociman.workspace = true
pg-ephemeral.workspace = true
pretty_assertions.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
