[package]
name = "pg-client"
version = "0.0.3"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "PostgreSQL client configuration and connection management"
license = "MIT"
repository = "https://github.com/mbj/mrs/tree/main/pg-client"
readme = "README.md"
keywords = ["postgres", "postgresql", "database", "client"]
categories = ["database"]

[lints]
workspace = true

[features]
default = []
clap = ["dep:clap", "dep:nom", "dep:nom-language"]
sqlx = ["dep:indoc", "dep:log", "dep:serde_json", "dep:sqlx", "dep:tokio"]
test-utils = []

[dependencies]
clap = { workspace = true, optional = true }
cmd-proc.workspace = true
fluent-uri.workspace = true
hostname-validator = "1.1.1"
indoc = { workspace = true, optional = true }
log = { workspace = true, optional = true }
nom = { workspace = true, optional = true }
nom-language = { workspace = true, optional = true }
serde.workspace = true
serde_json = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
strum.workspace = true
thiserror.workspace = true
tokio = { workspace = true, optional = true }

[dev-dependencies]
env_logger.workspace = true
indoc.workspace = true
ociman.workspace = true
pg-ephemeral.workspace = true
pretty_assertions.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
