[package]
name = "pg-ephemeral"
version = "0.0.1-pre2"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Ephemeral PostgreSQL instances for testing"
license = "MIT"
repository = "https://github.com/mbj/mrs/tree/main/pg-ephemeral"
readme = "README.md"
keywords = ["postgres", "postgresql", "testing", "database"]
categories = ["development-tools::testing"]

[lints]
workspace = true

[dependencies]
clap.workspace = true
cmd-proc.workspace = true
env_logger.workspace = true
git-proc.workspace = true
hex.workspace = true
humantime-serde = "1"
indexmap = { version = "2.7", features = ["serde"] }
log.workspace = true
nom.workspace = true
nom-language.workspace = true
ociman.workspace = true
pg-client.workspace = true
rand.workspace = true
rcgen = "0.13"
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time = "0.3"
tokio.workspace = true
toml.workspace = true
x509-parser = { version = "0.18", features = ["verify"] }

[dev-dependencies]
indoc.workspace = true

[[bin]]
name = "pg-ephemeral"
