[package]
name = "pg-ephemeral"
version = "0.4.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Ephemeral PostgreSQL instances for testing"
license = "MIT"
repository = "https://github.com/mbj/mrs/tree/main/pg-ephemeral"
readme = "README.md"
keywords = ["postgres", "postgresql", "testing", "database"]
categories = ["development-tools::testing"]

[features]
test-utils = []

[lints]
workspace = true

[dependencies]
clap.workspace = true
cmd-proc.workspace = true
comfy-table.workspace = true
env_logger.workspace = true
git-proc.workspace = true
hex.workspace = true
humantime-serde = "1"
include_dir.workspace = true
indexmap = { version = "2.13", features = ["serde"] }
indoc.workspace = true
libtest-mimic.workspace = true
log.workspace = true
nom.workspace = true
nom-language.workspace = true
ociman.workspace = true
pg-client.workspace = true
rand.workspace = true
rcgen = "0.14"
rustix.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time = "0.3"
tokio.workspace = true
toml.workspace = true
x509-parser = { version = "0.18", features = ["verify"] }

[dev-dependencies]
libc.workspace = true

[[bin]]
name = "pg-ephemeral"

# Cargo-test entry point for the `meta test` suite. The wrapper proxies
# to `pg-ephemeral meta test`, so each test runs inside the actual
# production binary's process — exercising main(), CLI parsing, and any
# startup hooks that a normal cargo-test build would not touch.
# Deliberately uses no pg_ephemeral:: symbols so the wrapper itself
# links nothing from the library.
[[test]]
name = "meta"
harness = false
