[package]
edition.workspace = true
name = "stack-deploy"
version = "0.0.1"

[lints]
workspace = true

[dependencies]
aws-config = { version = "1", default-features = false }
aws-sdk-cloudformation = { version = "1", default-features = false }
aws-sdk-cloudwatchlogs = { version = "1", default-features = false }
aws-sdk-lambda = { version = "1", default-features = false }
aws-sdk-s3 = { version = "1", default-features = false }
aws-sdk-secretsmanager = { version = "1", default-features = false }
base64 = "0.22.1"
chrono.workspace = true
clap.workspace = true
cmd-proc.workspace = true
hex.workspace = true
http.workspace = true
log.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
stratosphere.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
uuid = { version = "1.17.0", features = ["v4"] }
zip = "4.0.0"
