[package]
name = "stack-deploy"
version = "0.0.3"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "AWS CloudFormation stack deployment orchestration library with change set review, event monitoring, and Lambda deployment support"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mbj/mrs/tree/main/stack-deploy"
homepage = "https://github.com/mbj/mrs/tree/main/stack-deploy"
keywords = ["aws", "cloudformation", "deployment", "infrastructure"]
categories = ["development-tools"]

[lints]
workspace = true

[dependencies]
aws-config = { version = "1", default-features = false }
aws-sdk-cloudformation = { version = "1", default-features = false }
aws-sdk-lambda = { version = "1", default-features = false }
aws-sdk-s3 = { version = "1", default-features = false }
aws-sdk-secretsmanager = { version = "1", default-features = false }
base64 = "0.22.1"
chrono.workspace = true
clap.workspace = true
cmd-proc.workspace = true
hex.workspace = true
http.workspace = true
log.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
stratosphere.workspace = true
strum.workspace = true
tokio.workspace = true
url.workspace = true
uuid = { version = "1.21.0", features = ["v4"] }
zip = "8.1.0"
