[package]
edition.workspace = true
rust-version.workspace = true
name = "stratosphere-core"
version = "0.0.1"
description = "Core types and utilities for stratosphere - a type-safe CloudFormation template generation library"
license = "MIT"
repository = "https://github.com/mbj/mrs/tree/main/stratosphere-core"
homepage = "https://github.com/mbj/mrs/tree/main/stratosphere-core"
keywords = ["aws", "cloudformation", "infrastructure", "template"]
categories = ["development-tools"]
exclude = ["update-model-file.sh"]

[lints]
workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { workspace = true }
proc-macro2 = "1.0"
quote = "1.0"
regex-lite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = "0.1.17"
strum = { version = "0.27.1", features = ["derive"] }
syn = "2.0.106"
