[package]
edition.workspace = true
rust-version.workspace = true
name = "stratosphere-core"
version = "0.0.6"
description = "Core types and utilities for stratosphere - a type-safe CloudFormation template generation library"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mbj/mrs/tree/main/stratosphere-core"
homepage = "https://github.com/mbj/mrs/tree/main/stratosphere-core"
keywords = ["aws", "cloudformation", "infrastructure", "template"]
categories = ["development-tools"]
exclude = ["update-model-file.sh"]

[lints]
workspace = true

[dependencies]
chrono.workspace = true
clap.workspace = true
proc-macro2.workspace = true
quote.workspace = true
nom.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_path_to_error.workspace = true
strum.workspace = true
syn.workspace = true
