[package]
name = "stratosphere-generator"
version = "0.0.1"
edition.workspace = true

[dependencies]
pretty_assertions = "1.4"
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"
serde = "1"
serde_json = "1"
stratosphere-core = { path = "../stratosphere-core" }
syn = { version = "2", features = ["derive"] }

[lib]
proc-macro = true
