[package]
name = "stratosphere-generator"
version = "0.0.1"
edition.workspace = true
description = "Procedural macro code generator for stratosphere - generates CloudFormation resource types"
license = "MIT"
repository = "https://github.com/mbj/mrs/tree/main/stratosphere-generator"
homepage = "https://github.com/mbj/mrs/tree/main/stratosphere-generator"
keywords = ["aws", "cloudformation", "codegen", "proc-macro"]
categories = ["development-tools"]

[lints]
workspace = true

[dependencies]
pretty_assertions = "1.4"
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"
serde = "1"
serde_json = "1"
stratosphere-core = { path = "../stratosphere-core" }
syn = { version = "2", features = ["derive"] }

[lib]
proc-macro = true
