[package]
name = "stratosphere-generator"
version = "0.0.3"
edition.workspace = true
rust-version.workspace = true
description = "Procedural macro code generator for stratosphere - generates CloudFormation resource types"
license = "MIT"
repository = "https://github.com/mbj/mrs/tree/main/stratosphere-generator"
homepage = "https://github.com/mbj/mrs/tree/main/stratosphere-generator"
keywords = ["aws", "cloudformation", "codegen", "proc-macro"]
categories = ["development-tools"]

[lints]
workspace = true

[dependencies]
pretty_assertions = "1.4"
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde.workspace = true
serde_json.workspace = true
stratosphere-core = { workspace = true }
syn.workspace = true

[lib]
proc-macro = true
