[package]
name = "stratosphere"
version = "0.0.1"
edition.workspace = true
description = "Type-safe CloudFormation template generation library for Rust"
license = "MIT"
repository = "https://github.com/mbj/mrs/tree/main/stratosphere"
homepage = "https://github.com/mbj/mrs/tree/main/stratosphere"
keywords = ["aws", "cloudformation", "iac", "infrastructure"]
categories = ["development-tools"]

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
prettyplease = "0.2"
stratosphere-core = { path = "../stratosphere-core" }
stratosphere-generator = { path = "../stratosphere-generator" }
syn = "2"

[dev-dependencies]
chrono = "0.4"
insta = "1"
pretty_assertions = "1"
serde_json = { workspace = true }

[[bin]]
name = "stratosphere-generator"
