[package]
name = "stratosphere"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
description = "Type-safe CloudFormation template generation library for Rust with comprehensive coverage of all CloudFormation types. Generates types on-demand from official AWS resource specifications, keeping compiled code minimal."
license = "MIT"
repository = "https://github.com/mbj/mrs/tree/main/stratosphere"
homepage = "https://github.com/mbj/mrs/tree/main/stratosphere"
keywords = ["aws", "cloudformation", "iac", "infrastructure"]
categories = ["development-tools"]

[lints]
workspace = true

[dependencies]
clap.workspace = true
prettyplease.workspace = true
stratosphere-core.workspace = true
stratosphere-generator.workspace = true
syn.workspace = true

[dev-dependencies]
chrono.workspace = true
insta = "1"
pretty_assertions = "1"
serde_json.workspace = true

[[bin]]
name = "stratosphere-gen"
