[package]
name = "swaybridge"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Stream Sway virtual outputs to remote displays over SRT"
license = "MIT"
repository = "https://github.com/mbj/mrs/tree/main/swaybridge"
readme = "README.md"
keywords = ["sway", "srt", "streaming", "wayland"]
categories = ["command-line-utilities"]
default-run = "swaybridge"

[lints]
workspace = true

[dependencies]
clap.workspace = true
cmd-proc.workspace = true
dirs.workspace = true
rand.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
comfy-table.workspace = true
thiserror.workspace = true
toml.workspace = true
url.workspace = true

[dev-dependencies]
indoc.workspace = true

[[bin]]
name = "swaybridge"
