[package]
edition.workspace = true
rust-version.workspace = true
name = "typed-reqwest"
version = "0.0.1"
description = "Turn any type into a typed HTTP reqwest request with link header pagination"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mbj/mrs/tree/main/typed-reqwest"
homepage = "https://github.com/mbj/mrs/tree/main/typed-reqwest"
keywords = ["http", "client", "api"]
categories = ["web-programming::http-client"]

[features]
test-utils = []

[lints]
workspace = true

[dependencies]
futures-util.workspace = true
http.workspace = true
log.workspace = true
nom.workspace = true
nom-language.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tower-service.workspace = true
url.workspace = true

[dev-dependencies]
typed-reqwest = { path = ".", features = ["test-utils"] }
tokio.workspace = true
